# aie5_hw17

./: .gitignore  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
data/data/: biomedical_engineering_colleges.json
ollama_deep_researcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
qdrant_storage/: raft_state.json
qdrant_storage/collections/research_vectors/: config.json
qdrant_storage/collections/research_vectors/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/research_vectors/0/segments/0de03453-cc73-4a31-872e-f13b4adaed66/: 000076.sst  000079.sst  000081.sst  000083.sst  000085.sst  000087.sst  000089.sst  000091.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
qdrant_storage/collections/research_vectors/0/segments/430e064b-d8c7-44e8-8087-5c54ad53d083/: 000076.sst  000079.sst  000081.sst  000083.sst  000085.sst  000087.sst  000089.sst  000091.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
qdrant_storage/collections/research_vectors/0/segments/7f03c174-7fbd-46f6-b472-529f401041db/: 000076.sst  000079.sst  000081.sst  000083.sst  000085.sst  000087.sst  000089.sst  000091.sst  000094.sst  000097.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
qdrant_storage/collections/research_vectors/0/segments/908a476d-04a8-4baf-bb9d-0d3e14354ee3/: 000076.sst  000079.sst  000081.sst  000083.sst  LOG  (+7 more)
qdrant_storage/collections/research_vectors/0/wal/: first-index
src/assistant/: configuration.py  document_loader.py  graph.py  state.py  vector_store.py
(+72 files in other folders)
